[DEEPAK][FR][DEV] : Updated UI & added logic for adding Batches

--- a/css/sidebars.css
+++ b/css/sidebars.css
@@ -1,26 +1,33 @@
-body {
+/* body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
-}
+} */
 
-html {
+/* html {
   height: -webkit-fill-available;
-}
+} */
 
 main {
   height: 100vh;
   height: -webkit-fill-available;
-  max-height: 100vh;
-  overflow-x: auto;
-  overflow-y: scroll;
+  /* max-height: 100vh; */
+  /* overflow-x: auto; */
+  /* overflow-y: scroll; */
 }
 
-.sidebar{
+/* .sidebar{
   position: sticky;
-}
+} */
 
+/* .dashboard-heading{
+  font-weight: bolder;
+  font-size: xx-large;
+} */
 
-
-.scrollarea {
+.dashboard-content {
+  height: 100vh;
+  max-height: 100vh;
+  overflow-y: scroll;
+  width: 100%;
   /* overflow-y: auto; */
 }
